[package]
name = "librime-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
librime-sys = "0.4.0"
rime-api = { version = "0.11.0", features = ["serde"] }
jsonrpsee = { version = "0.20.0", features = ["full"] }
anyhow = "1.0.75"
serde = { version = "1.0.185", features = ["derive", "serde_derive"] }
serde_json = { version = "1.0.105" }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
ctrlc = "3.4.0"
once_cell = "1.18.0"